--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -87,6 +87,17 @@
   "projection_name_7": "Dream Fund",
   "projection_name_8": "Financial Freedom Quest",
   "projection_name_9": "Prosperity Path",
-  "projection_name_10": "Cash Flow Kingdom"
+  "projection_name_10": "Cash Flow Kingdom",
+  "randomize_name": "Randomize name",
+  "card_total_income": "Total Income",
+  "card_total_expense": "Total Expense",
+  "card_returns": "Returns",
+  "card_final_total": "Final Total",
+  "confirm_delete_projection_title": "Delete Projection?",
+  "confirm_delete_projection_message": "Are you sure you want to delete this projection? This action cannot be undone.",
+  "confirm_delete_transaction_title": "Delete Transaction?",
+  "confirm_delete_transaction_message": "Are you sure you want to delete this transaction? This action cannot be undone.",
+  "confirm_button": "Delete",
+  "cancel_button": "Cancel"
 }
 
